--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
     .resume-btn:hover i {
       transform: scale(1.15);
     }
+
+    /* About block */
+    .about {
+      margin-top: 40px;
+      padding: 20px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+    .about h2 {
+      color: #13294b;
+    }
+    .about p {
+      line-height: 1.6;
+    }
   </style>
 
   <!-- Font Awesome for icons -->
@@ -121,6 +136,23 @@
         <i class="fas fa-file-pdf"></i> Download My Resume
       </a>
     </p>
+
+    <!-- ✅ About Me block -->
+    <div class="about">
+      <h2>About Me</h2>
+      <p>I am a <strong>Cybersecurity Analyst</strong> with expertise in:</p>
+      <ul>
+        <li>Digital Forensics & Incident Response (DFIR)</li>
+        <li>Risk Management & Compliance (NIST, SOX ITGC)</li>
+        <li>Vulnerability Assessment & SIEM (Splunk, Rapid7)</li>
+        <li>Secure System Administration (Linux/Windows)</li>
+      </ul>
+      <p>
+        I specialize in building resilient systems, investigating intrusions, and aligning cybersecurity practices with industry frameworks. 
+        Currently, I am completing my <strong>M.S. in Cybersecurity Technology (2025)</strong> at UMGC.  
+      </p>
+      <p><em>Career Goal:</em> I am seeking opportunities in <strong>SOC analysis, digital forensics, vulnerability management, and compliance roles</strong>.</p>
+    </div>
   </section>
 
   <footer>
