--- a/certifications.html
+++ b/certifications.html
@@ -42,14 +42,15 @@
   </nav>
 
   <section>
-    <h2>Completed Certifications</h2>
-    <div class="card">
-      <ul class="clean">
-        <li><strong>Python Basics for Data Science</strong> — IBM (2024)</li>
-        <li><strong>R Programming Fundamentals</strong> — Stanford Online (2024)</li>
-      </ul>
-    </div>
-  </section>
+  <h2>Completed Certifications</h2>
+  <p>Here are my verified certifications that highlight my technical knowledge and professional development in cybersecurity and data science.</p>
+  <div class="card">
+    <ul class="clean">
+      <li><strong>Python Basics for Data Science</strong> — IBM (2024)</li>
+      <li><strong>R Programming Fundamentals</strong> — Stanford Online (2024)</li>
+    </ul>
+  </div>
+</section>
 
   <footer>
     © 2025 Niknaz Sadehvandi · Cybersecurity Portfolio
