--- a/certifications.html
+++ b/certifications.html
@@ -46,8 +46,8 @@
   <p>Here are my verified certifications that highlight my technical knowledge and professional development in cybersecurity and data science.</p>
   <div class="card">
    <ul class="clean">
-  <li><strong>Python Basics for Data Science</strong><br><em>IBM, 2024</em></li>
-  <li><strong>R Programming Fundamentals</strong><br><em>Stanford Online, 2024</em></li>
+  <li><strong>Python Basics for Data Science</strong><br><em>IBM</em>, 2024</li>
+<li><strong>R Programming Fundamentals</strong><br><em>Stanford Online</em>, 2024</li>
 </ul>
   </div>
 </section>
