--- a/certifications.html
+++ b/certifications.html
@@ -13,32 +13,53 @@
   <meta property="og:url" content="https://niknaz-65.github.io/certifications.html" />
 
   <style>
-    :root { --navy:#0a1f44; --navy2:#13294b; --ink:#333; --shadow:0 2px 5px rgba(0,0,0,.1); }
-    body{font-family:Arial,sans-serif;margin:0;background:#f7f9fc;color:var(--ink)}
-    header{background:var(--navy);color:#fff;padding:36px 16px;text-align:center}
+    :root{
+      --navy:#0a1f44; --navy2:#13294b; --ink:#222;
+      --muted:#5b6474; --card:#fff; --bg:#f7f9fc;
+      --shadow:0 2px 6px rgba(0,0,0,.08);
+      --shadowHover:0 10px 24px rgba(0,0,0,.14);
+      --radius:14px;
+    }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--ink)}
+    header{background:var(--navy);color:#fff;text-align:center;padding:40px 16px}
+    header h1{margin:0 0 6px;font-size:2.2rem}
+    header p{margin:0;opacity:.9}
     nav{background:var(--navy2);padding:12px;text-align:center}
-    nav a{color:#fff;margin:0 15px;text-decoration:none;font-weight:bold}
+    nav a{color:#fff;margin:0 16px;text-decoration:none;font-weight:700}
     nav a.active,nav a:hover{text-decoration:underline;text-underline-offset:4px}
-    section{max-width:900px;margin:0 auto;padding:40px 16px}
-    h2{color:var(--navy2);margin:0 0 12px}
-    .card{background:#fff;border-radius:12px;box-shadow:var(--shadow);padding:22px;margin:20px 0}
-    ul.clean{margin:0;padding-left:20px}
-    ul.clean li{margin:18px 0;list-style:none}
-    footer{background:var(--navy);color:#fff;text-align:center;padding:20px;margin-top:40px}
-    a:focus,button:focus{outline:3px solid #ffbf47;outline-offset:2px}
 
-    /* Logo styling */
-    .cert-logo {
-      height: 32px;
-      vertical-align: middle;
-      margin-right: 10px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      border-radius: 4px;
+    main{max-width:980px;margin:0 auto;padding:42px 16px}
+    h2{color:var(--navy2);margin:0 0 10px;font-size:1.9rem}
+    .lead{margin:0 0 22px;color:var(--muted);line-height:1.6}
+
+    /* Certification list */
+    .cert-list{display:flex;flex-direction:column;gap:16px;margin:0;padding:0;list-style:none}
+    .cert-item{
+      background:var(--card); border-radius:var(--radius);
+      box-shadow:var(--shadow); overflow:hidden;
+      transition:transform .18s ease, box-shadow .18s ease, border-color .18s ease;
     }
-    .cert-logo:hover {
-      transform: scale(1.12);
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    .cert-item:hover{transform:translateY(-3px); box-shadow:var(--shadowHover)}
+    .cert-link{
+      display:flex; align-items:center; gap:18px; padding:18px 20px;
+      color:inherit; text-decoration:none;
     }
+    .cert-logo{
+      height:32px; width:auto; display:block; flex:0 0 auto;
+      filter: contrast(1.05) saturate(1.05);
+    }
+    .cert-content{display:flex; flex-direction:column; gap:4px}
+    .cert-title{font-weight:800; font-size:1.05rem; color:var(--navy2); margin:0}
+    .cert-meta{margin:0; color:var(--muted)}
+    /* Small screens: keep things tight */
+    @media (max-width:520px){
+      .cert-link{gap:14px; padding:16px}
+      .cert-logo{height:28px}
+      .cert-title{font-size:1rem}
+    }
+
+    footer{background:var(--navy);color:#fff;text-align:center;padding:22px;margin-top:44px}
   </style>
 </head>
 <body>
@@ -54,28 +75,37 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-  <section>
+  <main>
     <h2>Completed Certifications</h2>
-    <p>Here are my verified certifications that highlight my technical knowledge and professional development in cybersecurity and data science.</p>
-    <div class="card">
-      <ul class="clean">
-        <li>
-          <a href="https://courses.edx.org/certificates/2f9347cd516d4c7296302b80452aea30" target="_blank" rel="noopener noreferrer">
-            <img class="cert-logo" src="assets/ibm-logo.png" alt="IBM Logo">
-          </a>
-          <strong>Python Basics for Data Science</strong><br>
-          <em>IBM</em>, 2024
-        </li>
-        <li>
-          <a href="https://courses.edx.org/certificates/42943ee922994bb0876b9de66dac1801" target="_blank" rel="noopener noreferrer">
-            <img class="cert-logo" src="assets/stanford-logo.png" alt="Stanford Online Logo">
-          </a>
-          <strong>R Programming Fundamentals</strong><br>
-          <em>Stanford Online</em>, 2024
-        </li>
-      </ul>
-    </div>
-  </section>
+    <p class="lead">
+      Here are my verified certifications that highlight my technical knowledge and professional development
+      in cybersecurity and data science.
+    </p>
+
+    <ul class="cert-list">
+      <!-- IBM -->
+      <li class="cert-item">
+        <a class="cert-link" href="assets/Niknaz_IBM_Python_DataScience.pdf" target="_blank" rel="noopener noreferrer" aria-label="Open IBM Python Basics for Data Science certificate">
+          <img class="cert-logo" src="assets/ibm-logo.png" alt="IBM logo">
+          <div class="cert-content">
+            <p class="cert-title">Python Basics for Data Science</p>
+            <p class="cert-meta">IBM, 2024</p>
+          </div>
+        </a>
+      </li>
+
+      <!-- Stanford Online -->
+      <li class="cert-item">
+        <a class="cert-link" href="assets/Niknaz_Stanford_R_Fundamentals.pdf" target="_blank" rel="noopener noreferrer" aria-label="Open Stanford Online R Programming Fundamentals certificate">
+          <img class="cert-logo" src="assets/stanford-logo.png" alt="Stanford Online logo">
+          <div class="cert-content">
+            <p class="cert-title">R Programming Fundamentals</p>
+            <p class="cert-meta">Stanford Online, 2024</p>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </main>
 
   <footer>
     © 2025 Niknaz Sadehvandi · Cybersecurity Portfolio
